Refactor : User 객체가 아닌 user id를 매개변수로 전달하도록 변경